Unit1/2Syntax/syntax-disaster-compiler-errors.txt
clang -ggdb3 -O0 -std=c11 -Wall -Werror -Wshadow    syntax-disaster.c  -lcs50 -lm -o syntax-disaster
syntax-disaster.c:13:24: error: expected ')'
    printf(hello, world\n")
                       ^
syntax-disaster.c:13:11: note: to match this '('
    printf(hello, world\n")
          ^
syntax-disaster.c:13:26: error: missing terminating '"' character [-Werror,-Winvalid-pp-token]
    printf(hello, world\n")
                         ^
syntax-disaster.c:17:12: error: use of undeclared identifier 'cat'
    while (cat = 5)
           ^
syntax-disaster.c:19:9: error: use of undeclared identifier 'cat'
        cat 3++;
        ^
syntax-disaster.c:24:12: error: array type 'char [5]' is not assignable
    "meow" = catSound;
    ~~~~~~ ^
syntax-disaster.c:26:21: error: declaration shadows a local variable [-Werror,-Wshadow]
    for (int i = 0, i < 5; i++)
                    ^
syntax-disaster.c:26:14: note: previous declaration is here
    for (int i = 0, i < 5; i++)
             ^
syntax-disaster.c:26:21: error: redefinition of 'i'
    for (int i = 0, i < 5; i++)
                    ^
syntax-disaster.c:26:14: note: previous definition is here
    for (int i = 0, i < 5; i++)
             ^
syntax-disaster.c:26:23: error: expected ';' in 'for' statement specifier
    for (int i = 0, i < 5; i++)
                      ^
syntax-disaster.c:26:23: error: expected expression
9 errors generated.
make: *** [syntax-disaster] Error 1
